ci(wf):build job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,11 +9,9 @@ on:
 jobs:
   linux-build:
     name: Linux Build
-    runs-on: python:3.11-alpine
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: "pip3 install -r requirements.txt"
-      - run: "apk add make ccache clang gcc patchelf"
       - run: "make build-cli"
   sonarcloud:
     name: SonarCloud
